# dioxus-mobile-demo

./: Cargo.toml  mobile.toml
src/: android_it.rs  lib.rs  main.rs
